force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__No_of_Recurring_Gift_Payments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_of_Recurring_Gift_Payments__c</fullName>
    <description>Number of Recurring Gift Payment transactions expected in this Session.</description>
    <inlineHelpText>Number of Recurring Gift Payment transactions expected in this Session.</inlineHelpText>
    <label>No. of Recurring Gift Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>