force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__One_Time_Membership_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__One_Time_Membership_Amount__c</fullName>
    <description>Expected One-Time Membership Amount transacted in this Session.</description>
    <inlineHelpText>Expected One-Time Membership Amount transacted in this Session.</inlineHelpText>
    <label>One-Time Membership Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>