force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__One_Time_Membership_Amount_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__One_Time_Membership_Amount_Posted__c</fullName>
    <description>One-Time Membership Amount posted in the Session.</description>
    <inlineHelpText>One-Time Membership Amount posted in the Session.</inlineHelpText>
    <label>One-Time Membership Amount Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>