force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Pledge_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Payment_Amount__c</fullName>
    <description>Expected Pledge Payment Amount transacted in this Session.</description>
    <inlineHelpText>Expected Pledge Payment Amount transacted in this Session.</inlineHelpText>
    <label>Pledge Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>