force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Pledge_Payment_Amount_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Payment_Amount_Posted__c</fullName>
    <description>Pledge Payment Amount Posted in this session</description>
    <inlineHelpText>Pledge Payment Amount Posted in this session</inlineHelpText>
    <label>Pledge Payment Amount Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>