force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Recurring_Gift_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Recurring_Gift_Payment_Amount__c</fullName>
    <description>Expected Recurring Gift Payment Amount transacted in this Session.</description>
    <inlineHelpText>Expected Recurring Gift Payment Amount transacted in this Session.</inlineHelpText>
    <label>Recurring Gift Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>