force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Recurring_Gift_Payment_Amount_Posted__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Recurring_Gift_Payment_Amount_Posted__c</fullName>
    <description>Recurring Gift Payment Amount Posted in this Session.</description>
    <inlineHelpText>Recurring Gift Payment Amount Posted in this Session.</inlineHelpText>
    <label>Recurring Gift Payment Amount Posted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>