force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Review_Session_Pre_Balance_Report__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Session_Pre_Balance_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Session Pre-Balance Report</label>
    <type>Checkbox</type>
</CustomField>