force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Sent_to_G_L_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sent_to_G_L_Date__c</fullName>
    <label>Sent to G / L Date</label>
    <type>DateTime</type>
</CustomField>