force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Session_Completed__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Completed__c</fullName>
    <label>Session Completed</label>
    <type>DateTime</type>
</CustomField>