force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Session_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sessions_Session_Completed_By</relationshipName>
    <type>Lookup</type>
</CustomField>