force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Session_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Session Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>