force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Session_Default_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Default_1__c</fullName>
    <description>Default Values for Session&apos;s Expedited Transaction Entry</description>
    <inlineHelpText>Default Values for Session&apos;s Expedited Transaction Entry</inlineHelpText>
    <label>Session Default 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>