force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Session_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Description__c</fullName>
    <label>Session Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>