force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Session_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Name_Auto_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Session Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>