force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Session_Started__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session_Started__c</fullName>
    <label>Session Started</label>
    <type>DateTime</type>
</CustomField>