force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>iModules</fullName>
            </value>
            <value>
                <fullName>ISU Alumni Association</fullName>
            </value>
            <value>
                <fullName>ISUF Payroll Deduct</fullName>
            </value>
            <value>
                <fullName>ISU Payroll Deduct</fullName>
            </value>
            <value>
                <fullName>Online Donations</fullName>
            </value>
            <value>
                <fullName>Reiman Credit Cards</fullName>
            </value>
            <value>
                <fullName>Ruffalo Cody</fullName>
            </value>
            <value>
                <fullName>Scalefunder/FundISU</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>