force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>