force-app/main/default/objects/ucinn_ascendv2__Session__c/fields/ucinn_ascendv2__Tender_Type_for_Gifts__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tender_Type_for_Gifts__c</fullName>
    <label>Tender Type for Gifts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>GIK (Gift-in-Kind)</fullName>
            </value>
            <value>
                <fullName>Payroll Deduction</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Stock Gift</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>Visa Recurring</fullName>
            </value>
            <value>
                <fullName>American Express Recurring</fullName>
            </value>
            <value>
                <fullName>Discover Recurring</fullName>
            </value>
            <value>
                <fullName>MasterCard Recurring</fullName>
            </value>
            <value>
                <fullName>Art, Antiques, and Collectibles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>