force-app/main/default/objects/ucinn_ascendv2__Session__c/listViews/All_Sessions.listView-meta.xml
<ListView>
    <fullName>All_Sessions</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Session_Description__c</columns>
    <columns>ucinn_ascendv2__Session_Completed__c</columns>
    <columns>ucinn_ascendv2__Is_Ready_for_G_L__c</columns>
    <columns>ucinn_ascendv2__Is_Sent_to_G_L__c</columns>
    <columns>ucinn_ascendv2__Session_Totals_Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Session_Totals_Approved__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Sessions</label>
</ListView>