force-app/main/default/objects/ucinn_ascendv2__Session__c/listViews/All_Unapproved_Completed_Sessions_Reiman.listView-meta.xml
<ListView>
    <fullName>All_Unapproved_Completed_Sessions_Reiman</fullName>
    <columns>ucinn_ascendv2__Session_Date__c</columns>
    <columns>NAME</columns>
    <columns>Batch_Number__c</columns>
    <columns>ucinn_ascendv2__Session_Description__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>ucinn_ascendv2__Session_Operator_Assigned__c</columns>
    <columns>ucinn_ascendv2__Pledge_Amount__c</columns>
    <columns>ucinn_ascendv2__Gift_Pledge_Payment_Amount__c</columns>
    <columns>ucinn_ascendv2__Non_Gift_Amount__c</columns>
    <columns>ucinn_ascendv2__Match_Amount__c</columns>
    <columns>ucinn_ascendv2__Session_Started__c</columns>
    <columns>ucinn_ascendv2__Session_Completed__c</columns>
    <columns>ucinn_ascendv2__Session_Totals_Approved__c</columns>
    <columns>ucinn_ascendv2__No_of_Transactions_Posted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Session_Totals_Approved__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Is_Completed_by_Gift_Specialist__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Batch_Number__c</field>
        <operation>equals</operation>
        <value>9950,9951,9952</value>
    </filters>
    <label>Reiman - Unapproved Completed Sessions</label>
    <sharedTo>
        <group>Gift_Administration</group>
    </sharedTo>
</ListView>