force-app/main/default/objects/ucinn_ascendv2__Session__c/listViews/Copy_of_All_Sessions_Reiman_Gardens.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Sessions_Reiman_Gardens</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Session_Description__c</columns>
    <columns>ucinn_ascendv2__Session_Completed__c</columns>
    <columns>ucinn_ascendv2__Is_Ready_for_G_L__c</columns>
    <columns>ucinn_ascendv2__Is_Sent_to_G_L__c</columns>
    <columns>ucinn_ascendv2__Session_Totals_Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Is_Ready_for_G_L__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Batch_Number__c</field>
        <operation>equals</operation>
        <value>9950,9951,9952</value>
    </filters>
    <label>Reiman - Copy of All Sessions</label>
    <sharedTo>
        <group>Gift_Administration</group>
    </sharedTo>
</ListView>