force-app/main/default/objects/ucinn_ascendv2__Session__c/listViews/Copy_of_Today_s_Sessions.listView-meta.xml
<ListView>
    <fullName>Copy_of_Today_s_Sessions</fullName>
    <columns>Batch_Number__c</columns>
    <columns>ucinn_ascendv2__Source__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Session_Description__c</columns>
    <columns>ucinn_ascendv2__Session_Date__c</columns>
    <columns>ucinn_ascendv2__Session_Operator_Assigned__c</columns>
    <columns>ucinn_ascendv2__Pledge_Amount__c</columns>
    <columns>ucinn_ascendv2__Gift_Pledge_Payment_Amount__c</columns>
    <columns>ucinn_ascendv2__Non_Gift_Amount__c</columns>
    <columns>ucinn_ascendv2__Match_Amount__c</columns>
    <columns>ucinn_ascendv2__Session_Started__c</columns>
    <columns>ucinn_ascendv2__Session_Completed__c</columns>
    <columns>ucinn_ascendv2__Is_Completed_by_Gift_Specialist__c</columns>
    <columns>ucinn_ascendv2__Is_Ready_for_G_L__c</columns>
    <columns>ucinn_ascendv2__Session_Totals_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Is_Completed_by_Gift_Specialist__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Sessions In Progress</label>
</ListView>