force-app/main/default/objects/ucinn_ascendv2__Session__c/listViews/ISUF_Session_Approval_Queue_Session.listView-meta.xml
<ListView>
    <fullName>ISUF_Session_Approval_Queue_Session</fullName>
    <filterScope>Queue</filterScope>
    <label>ISUF Session Approval Queue</label>
    <queue>ISUF_Session_Approval_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>