force-app/main/default/objects/ucinn_ascendv2__Session__c/listViews/Open_Sessions.listView-meta.xml
<ListView>
    <fullName>Open_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Batch_Number__c</columns>
    <columns>ucinn_ascendv2__Source__c</columns>
    <columns>ucinn_ascendv2__Session_Description__c</columns>
    <columns>ucinn_ascendv2__Session_Date__c</columns>
    <columns>ucinn_ascendv2__Session_Operator_Assigned__c</columns>
    <columns>ucinn_ascendv2__Pledge_Amount__c</columns>
    <columns>ucinn_ascendv2__Gift_Pledge_Payment_Amount__c</columns>
    <columns>ucinn_ascendv2__Non_Gift_Amount__c</columns>
    <columns>ucinn_ascendv2__Match_Amount__c</columns>
    <columns>ucinn_ascendv2__Session_Started__c</columns>
    <columns>ucinn_ascendv2__Session_Completed__c</columns>
    <columns>ucinn_ascendv2__Is_Ready_for_G_L__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Session_Completed__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open Sessions</label>
</ListView>