force-app/main/default/objects/ucinn_ascendv2__Session__c/listViews/Open_Sessions_with_Gifts.listView-meta.xml
<ListView>
    <fullName>Open_Sessions_with_Gifts</fullName>
    <booleanFilter>1 AND 3 AND (2 OR 4 OR 5 OR 6)</booleanFilter>
    <columns>NAME</columns>
    <columns>Batch_Number__c</columns>
    <columns>ucinn_ascendv2__Source__c</columns>
    <columns>ucinn_ascendv2__Session_Description__c</columns>
    <columns>ucinn_ascendv2__Session_Date__c</columns>
    <columns>ucinn_ascendv2__Session_Operator_Assigned__c</columns>
    <columns>ucinn_ascendv2__Pledge_Amount__c</columns>
    <columns>ucinn_ascendv2__Gift_Pledge_Payment_Amount__c</columns>
    <columns>ucinn_ascendv2__Membership_Payment_Amount_Posted__c</columns>
    <columns>ucinn_ascendv2__Non_Gift_Amount__c</columns>
    <columns>ucinn_ascendv2__Match_Amount__c</columns>
    <columns>ucinn_ascendv2__Session_Started__c</columns>
    <columns>ucinn_ascendv2__Session_Completed__c</columns>
    <columns>ucinn_ascendv2__Is_Ready_for_G_L__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ucinn_ascendv2__Session_Description__c</field>
        <operation>notContain</operation>
        <value>Alumni Association,Reiman</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Pledge_Amount__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Is_Completed_by_Gift_Specialist__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Gift_Pledge_Payment_Amount_Posted__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Match_Amount_Posted__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Match_Payment_Amount_Posted__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Open Sessions with Gifts</label>
</ListView>