force-app/main/default/objects/ucinn_ascendv2__Session__c/listViews/Rejected_Sessions.listView-meta.xml
<ListView>
    <fullName>Rejected_Sessions</fullName>
    <columns>Batch_Number__c</columns>
    <columns>ucinn_ascendv2__Source__c</columns>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Session_Description__c</columns>
    <columns>ucinn_ascendv2__Session_Date__c</columns>
    <columns>ucinn_ascendv2__Session_Operator_Assigned__c</columns>
    <columns>ucinn_ascendv2__Pledge_Amount__c</columns>
    <columns>ucinn_ascendv2__Gift_Pledge_Payment_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Sessions</label>
</ListView>